@@ -1,3 +1,9 @@
+2005-02-18  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR middle-end/20030
+	* fold-const.c (fold_indirect_ref_1): Use the correct index for zero access,
+	the lower bound of the array type if it exists.
+
 2005-02-18  Alexandre Oliva  <aoliva@redhat.com>
 
 	PR c++/20008
